--- a/style.css
+++ b/style.css
@@ -1,53 +1,72 @@
-.body-grid {
+body {
     margin: 0;
-    display: grid;
-    grid-template-rows: 60px 500px 80px;
-    background-color: white;
+    padding: 0;
 }
-
-.top-bar {
+nav {
     display: flex;
+    width: 100%;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
+    height: 50px;
+    font-size: 0.9em;
 }
-
-.top-bar > .items {
-    text-align: center;
-    font-size: small;
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(99, 99, 99);
-    padding: 0 10px;
+nav a {
+    text-decoration: none;
+    color:black;
+    margin-right: 20px;
 }
-
-.middle {
-    display: grid;
-    grid-template-columns: auto minmax(0, 700px) auto;
-}
-
-.main {
+.content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width:100%;
 }
-
-.footer {
-    background-color: rgb(235, 233, 230);
-}
-
-form {
+form{
+    margin-top: 30px;
     text-align: center;
     width: 100%;
-    margin: 20px;
 }
-input[type=text] {
-    border: 1px solid rgb(192, 189, 189);
-    border-radius: 1cm;
-    width: 80%;
+
+input{
+    border:1px solid lightgrey;
+    border-radius: 2em;
+    padding-left: 20px;
     height: 40px;
-    background-image: url("look.png");
-    background-repeat: no-repeat;
-    background-position: 10px;
-    padding-left: 45px;
+    width: 70%
+}
+
+button {
+    margin-top: 30px;
+    background-color: rgb(241, 239, 239);
+    border: 0;
+    padding: 10px;
+}
+button a {
+    color: rgb(59, 59, 59);
+    text-decoration: none;
+}
+
+.bottom {
+    width: 100%;
+    position: absolute;
+    background-color: rgb(248, 242, 242);
+    bottom: 0;
+    height: 50px;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+footer a {
+    font-size: 0.8em;
+    text-decoration: none;
+    color:gray;
+    margin-right: 30px;
+    margin-top: 10px;
 }
